Java 25 engine: the remaining nine node modules, each proven by differential test
All the pipeline's judgement is now ported. 676 tests green under -Xlint:all -Werror, PIT 93% overall
with every ported class inside the 89-100% band the JavaScript scored. Still zero runtime dependencies.

json-extract · parse-test · parse-fix · prep-prover · build-reproduce-input · build-fix-input ·
parse-markers · verdict · fix-skeptic · pr-maker.

Equivalence was measured, not claimed. Roughly 12,000 generated cases across four harnesses, every
output field compared with types distinguished so "" / 0 / null / undefined stay four results. The
headline: json-extract 955/955 identical including every truncation prefix, and parse-markers
5347/5562 with all 215 divergences attributed to four named families and none unexplained. The LLM
nodes were compared by prompt BYTES plus reply parsing plus the routing table, since a live call is
not deterministic.

The R1 blankness divergence from slice 1 is fixed properly rather than patched. JsText implements
ECMAScript trim, measured against Node over the whole BMP: JS-blank but not Character.isWhitespace is
U+00A0, U+2007, U+202F, U+FEFF; Java-blank but not JS is U+001C-U+001F. All eight are named in a test.
A source file containing only a BOM is now "empty" to Java as it always was to JS — infra_error and a
retry, rather than adjudicating a marker against a file with no code in it.

Three findings worth recording:

  a port defect the harness caught, in ParseFix: {"old_str":1e400} is well-formed JSON a model can
  emit. JS records null; the Java threw out of Json.stringify — a crash in the one node whose entire
  job is surviving a bad reply. Model-supplied values now render non-finite numbers as null, while
  the engine's own numbers keep the strict refusal that stops a NaN value_score being recorded.

  my brief was wrong: I told the prompt-family agent that build-fix-input had no JS test. It does,
  and the agent used it rather than inventi